# consultant-gpt

./: .gitignore  LICENSE  README.md  gemma_chpt_to_hf.sh  gemma_ft_a.sh  gemma_ft_v.sh  gemma_inference.sh  pyproject.toml  requirements.txt  train.sh  train_ft.sh  train_test.sh
fine tuning/: fine_tuning.py
fine_tuning/: fine_tuning.py  gemma_format.py  inference.py  notebook.py
gemma_ft/: chkp_to_hf.py  dataset_length.py  fine_tuning.py  gemma_format.py  inference.py  inference_merged.py  jsonl_dataset.py
scraping/: exclude_overlap.py  g_category.py  g_category_info.py  g_category_question.py  g_question_answer.py
