[tool.poetry]
name = "consultant-gpt"
version = "0.1.0"
description = ""
authors = []

readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "~3.10"
selenium = "^4.27.1"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]