[tool.poetry]
name = "consultant-gpt"
version = "0.1.0"
description = ""
authors = []

readme = "README.md"
packages = [
    { include = "scraping" },
]

[tool.poetry.dependencies]
python = "~3.10"
selenium = "^4.27.1"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.3"
tqdm = "^4.67.1"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^23.12.0"
mypy = "^1.7.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

[tool.pydantic-mypy]
warn_required_dynamic_aliases = true
warn_untyped_fields = true
init_forbid_extra = true
init_typed = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]